finatra: Address lifecycle around com.twitter.inject.app.App#appMain
Problem

The function `appMain` in `com.twitter.inject.app.App` is confusingly named and lack of
clear documentation has led to many incorrect usages. The Finatra server lifecycle
(before this change) can be found [here](http://twitter.github.io/finatra/user-guide/getting-started/#lifecycle).

The important thing to note is that the Finatra framework defines and controls the `main`
method expected from a [TwitterServer](http://twitter.github.io/twitter-server/). This is so the framework can properly control
lifecycle events (which includes setting up the injector).

The goal of the Finatra framework is to make it easy to create a server without having to
worry about this lifecycle as it will be correctly handled by the framework.

In simple terms, the lifecycle can be diagramed like as follows. When you run:
java -Dfoo=bar -jar myapplication.jar -flag=value

`com.twitter.app.App#main(String[] args)`
  --> `com.twitter.app.App#nonExitingMain` (calls inits, parses flags, premains)
    --> `com.twitter.server.TwitterServer#main`
      --> `com.twitter.inject.server.TwitterServer#main`
      --> `com.twitter.inject.app.App#main` (calls finatra lifecycle methods)
        --> `com.twitter.inject.app.App#run`
        --> `com.twitter.inject.server.TwitterServer#start`
  --> (postmains, Await(this))
  --> execute all closes
  --> `com.twitter.app.App#main(String[] args)` exits

The original intent of the `appMain` method was as a final callback for users to implement
any additional server construction *or* to provide their application implementation. The
conflation of these two usages is somewhat confusing and hard to correctly handle.

The method `appMain` is run after all lifecycle methods have completed but *for servers*
(unlike a generic main method for [TwitterServer](http://twitter.github.io/twitter-server/)) it was **not expected** that users
block in this method as they will prevent the server life